--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background-image: url(bg.webp);
+  background-size: cover;
+  color: #a0a1a3;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+} 
+
+.container{
+  height: 500px;
+  width: 300px;
+  background-color: rgba(0,0,0,0.72);
+  text-align: center;
+  padding: 50px;
+}
+
+h2{
+  font-size: 2rem;
+  color: white;
+  text-align: left;
+}
+
+input[type="text"], input[type="password"]{
+  height: 40px;
+  padding: 7px;
+  font-size: 1rem;    
+  border: 1px solid #a0a1a3;
+  outline: #a0a1a3;
+  border-radius: 3px;
+  background-color: transparent;
+  color: #a0a1a3;
+  backdrop-filter: blur(10px);
+}
+
+#btn1{
+  height: 35px;
+  width: 295px;
+  background-color: #e50913;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  margin: 15px 0px;
+}
+
+#btn2{
+  height: 35px;
+  width: 295px;
+  background-color: rgba(58, 58, 58, 0.85);  
+  color: white;
+  font-weight: 550;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  padding: 10px 50px;
+}
+
+#forgot-pass{
+  color: white;
+  font-size: 0.9rem;
+}
+
+.checkbox{
+  display: flex;
+  justify-content: flex-start;
+}
+
+#text{
+  text-align: left;
+}
+
+span{
+  font-weight: 600;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#bottom-text{
+  text-align: left;
+  font-size: 0.7rem;
+  opacity: 0.7;
 }
