--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(bg.webp);
+  background-image: url(images/bg.webp);
   background-size: cover;
   color: #a0a1a3;
   height: 100vh;
